--- a/package.json
+++ b/package.json
@@ -9,19 +9,60 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.6",
+    "@hookform/resolvers": "^3.3.2",
+    "@prisma/client": "^5.6.0",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@uploadthing/react": "^6.0.2",
+    "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.292.0",
+    "next": "14.0.3",
+    "next-auth": "^5.0.0-beta.3",
+    "query-string": "^8.1.0",
     "react": "^18",
+    "react-date-range": "^1.4.0",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
+    "resend": "^2.0.0",
+    "sonner": "^1.2.0",
+    "swiper": "^11.0.5",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.0.3",
+    "vaul": "^0.7.9",
+    "world-countries": "^5.0.0",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcrypt": "^5.0.2",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-date-range": "^1.4.8",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "postcss": "^8",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "prisma": "^5.6.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
