chore: fix formatting issues and organise import statements

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,33 @@
 {
-    "printWidth": 80,
-    "semi": true,
-    "vueIndentScriptAndStyle": false,
-    "bracketSpacing": true,
-    "bracketSameLine": false,
-    "singleAttributePerLine": false,
-    "plugins": ["prettier-plugin-tailwindcss"]
-  }
-  
+  "printWidth": 80,
+  "semi": true,
+  "vueIndentScriptAndStyle": false,
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "singleAttributePerLine": false,
+  "importOrder": [
+    "^(react/(.*)$)|^(react$)",
+    "",
+    "^(next/(.*)$)|^(next$)",
+    "<THIRD_PARTY_MODULES>",
+    "",
+    "^types$",
+    "^@/env(.*)$",
+    "^@/types/(.*)$",
+    "^@/config/(.*)$",
+    "^@/lib/(.*)$",
+    "",
+    "^@/hooks/(.*)$",
+    "",
+    "^@/components/ui/(.*)$",
+    "^@/components/(.*)$",
+    "^@/styles/(.*)$",
+    "^@/app/(.*)$",
+    "",
+    "^[./]"
+  ],
+  "plugins": [
+    "prettier-plugin-tailwindcss",
+    "@ianvs/prettier-plugin-sort-imports"
+  ]
+}
