--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "prettier": "npx prettier . --write"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.6",
@@ -55,6 +56,7 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@types/bcrypt": "^5.0.2",
     "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
